[package]
name = "skiller"
version = "0.2.1"
edition = "2024"
description = "Symlink manager for AI tool skill bundles"
license = "MIT"
repository = "https://github.com/vlwkaos/skiller"
readme = "README.md"

[[bin]]
name = "skiller"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
shellexpand = "3"
